fixed split screen alignment closes #42

--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -80,7 +80,7 @@ button {
   display: flex;
   min-height: 100vh;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: stretch;
   padding-top: 5rem;
 }
 
